Updated PowerShell event logs
- updated log_source to PowerShell
- added event samples (friendly view and xml)

--- a/windows/powershell/events/event-400.yml
+++ b/windows/powershell/events/event-400.yml
@@ -1,9 +1,9 @@
 name: 'Event ID 400: Engine Lifecycle'
-description: 'Logs the start and stop of PowerShell. Each time that PowerShell executes - either upon the execution of a single command, the start of a local session, or the start of a remoting session - this log records an Event ID (EID) 400 message: "Engine state is changed from None to Available." At the completion of the session, the log records an EID 403 event: "Engine state is changed from Available to Stopped".
-
+description: |-
+  Logs the start and stop of PowerShell. Each time that PowerShell executes - either upon the execution of a single command, the start of a local session, or the start of a remoting session - this log records an Event ID (EID) 400 message: "Engine state is changed from None to Available." At the completion of the session, the log records an EID 403 event: "Engine state is changed from Available to Stopped".
   The message details for both EID 400 and EID 403 events include a HostName field. If executed locally, this field will be logged as HostName=ConsoleHost. If PowerShell remoting is in use, the accessed system will record these events with HostName=ServerRemoteHost.'
 platform: windows
-log_source: powershell
+log_source: PowerShell
 event_id: '400'
 event_version: '0'
 event_fields:
@@ -101,3 +101,69 @@ references:
 - text: Investigating PowerShell Attacks - Mandiant
   link: https://www.blackhat.com/docs/us-14/materials/us-14-Kazanciyan-Investigating-Powershell-Attacks-WP.pdf
 tags: []
+event_sample:
+- format: friendly view
+  sample: |-
+    Log Name:      Windows PowerShell
+    Source:        PowerShell
+    Date:          9/22/2022 6:45:21 AM
+    Event ID:      400
+    Task Category: Engine Lifecycle
+    Level:         Information
+    Keywords:      Classic
+    User:          N/A
+    Computer:      pedro-computer
+    Description: Engine state is changed from None to Available. 
+
+    Details: 
+      NewEngineState=Available
+      PreviousEngineState=None
+      SequenceNumber=13
+      HostName=ConsoleHost
+      HostVersion=5.1.18362.1
+      HostId=13ab2020-b3a5-4687-8e01-5ae69621d13e
+      HostApplication=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
+      EngineVersion=5.1.18362.1
+      RunspaceId=aac91794-4be3-40e0-84f6-d92e5adc0868
+      PipelineId=
+      CommandName=
+      CommandType=
+      ScriptName=
+      CommandPath=
+      CommandLine=
+- format: xml
+  sample: |-
+    <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event">
+      <System>
+        <Provider Name="PowerShell" />
+        <EventID Qualifiers="0">400</EventID>
+        <Level>4</Level>
+        <Task>4</Task>
+        <Keywords>0x80000000000000</Keywords>
+        <TimeCreated SystemTime="2022-09-22T13:45:21.372268500Z" />
+        <EventRecordID>130</EventRecordID>
+        <Channel>Windows PowerShell</Channel>
+        <Computer>pedro-computer</Computer>
+        <Security />
+      </System>
+      <EventData>
+        <Data>Available</Data>
+        <Data>None</Data>
+        <Data>	NewEngineState=Available
+                PreviousEngineState=None
+                SequenceNumber=13
+                HostName=ConsoleHost
+                HostVersion=5.1.18362.1
+                HostId=13ab2020-b3a5-4687-8e01-5ae69621d13e
+                HostApplication=C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
+                EngineVersion=5.1.18362.1
+                RunspaceId=aac91794-4be3-40e0-84f6-d92e5adc0868
+                PipelineId=
+                CommandName=
+                CommandType=
+                ScriptName=
+                CommandPath=
+                CommandLine=
+        </Data>
+      </EventData>
+    </Event>
