--- a/windows/powershell/events/event-403.yml
+++ b/windows/powershell/events/event-403.yml
@@ -1,9 +1,9 @@
 name: 'Event ID 403: Engine Lifecycle'
-description: 'Logs the start and stop of PowerShell. Each time that PowerShell executes - either upon the execution of a single command, the start of a local session, or the start of a remoting session - this log records an Event ID (EID) 400 message: "Engine state is changed from None to Available." At the completion of the session, the log records an EID 403 event: "Engine state is changed from Available to Stopped".
-
+description: |-
+  Logs the start and stop of PowerShell. Each time that PowerShell executes - either upon the execution of a single command, the start of a local session, or the start of a remoting session - this log records an Event ID (EID) 400 message: "Engine state is changed from None to Available." At the completion of the session, the log records an EID 403 event: "Engine state is changed from Available to Stopped".
   The message details for both EID 400 and EID 403 events include a HostName field. If executed locally, this field will be logged as HostName=ConsoleHost. If PowerShell remoting is in use, the accessed system will record these events with HostName=ServerRemoteHost.'
 platform: windows
-log_source: powershell
+log_source: PowerShell
 event_id: '403'
 event_version: '0'
 event_fields:
