--- a/windows/etw-providers/Microsoft-Windows-PowerShell/events/event-24577_v1.yml
+++ b/windows/etw-providers/Microsoft-Windows-PowerShell/events/event-24577_v1.yml
@@ -10,8 +10,44 @@ event_fields:
   name: FileName
   type: UnicodeString
   description:
-  sample_value:
+  sample_value: C:\Users\pedro-admin\Desktop\PS_Collection\Export-WinEvents.ps1
 references:
 tags:
 - etw_level_Informational
 - etw_task_PowerShellISEOperation
+event_sample:
+- format: friendly view
+  sample: |-
+    Log Name:      Microsoft-Windows-PowerShell/Operational
+    Source:        Microsoft-Windows-PowerShell
+    Date:          9/22/2022 6:59:07 AM
+    Event ID:      24577
+    Task Category: PowerShell ISE Operation
+    Level:         Information
+    Keywords:      None
+    User:          PEDRO-COMPUTER\pedro-admin
+    Computer:      pedro-computer
+    Description:   Windows PowerShell ISE has started to run script file C:\Users\pedro-admin\Desktop\PS_Collection\Export-WinEvents.ps1.
+- format: xml
+  sample: |-
+    <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event">
+      <System>
+        <Provider Name="Microsoft-Windows-PowerShell" Guid="{a0c1853b-5c40-4b15-8766-3cf1c58f985a}" />
+        <EventID>24577</EventID>
+        <Version>1</Version>
+        <Level>4</Level>
+        <Task>120</Task>
+        <Opcode>20</Opcode>
+        <Keywords>0x0</Keywords>
+        <TimeCreated SystemTime="2022-09-22T13:59:07.812711500Z" />
+        <EventRecordID>514</EventRecordID>
+        <Correlation ActivityID="{19e5ad3d-ce9f-0000-9ecf-e5199fced801}" />
+        <Execution ProcessID="424" ThreadID="6788" />
+        <Channel>Microsoft-Windows-PowerShell/Operational</Channel>
+        <Computer>pedro-computer</Computer>
+        <Security UserID="S-1-5-21-3768430097-3400800235-1714852860-1001" />
+      </System>
+      <EventData>
+        <Data Name="FileName">C:\Users\pedro-admin\Desktop\PS_Collection\Export-WinEvents.ps1</Data>
+      </EventData>
+    </Event>
