--- a/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4697.yml
+++ b/windows/etw-providers/Microsoft-Windows-Security-Auditing/events/event-4697.yml
@@ -72,6 +72,29 @@ tags:
 - System
 - Audit Security System Extension
 event_sample:
+- format: friendly view
+  sample: |-
+    Log Name:      Security 
+    Source:        Microsoft-Windows-Security-Auditing 
+    Date:          9/14/2022 8:55:42 PM 
+    Event ID:      4697 
+    Task Category: Security System Extension 
+    Level:         Information 
+    Keywords:      Audit Success 
+    User:          N/A 
+    Computer:      pedro-computer 
+    Description:   A service was installed in the system.
+    Subject: 
+      Security ID:		PEDRO-COMPUTER\pedro-admin 
+      Account Name:		pedro-admin 
+      Account Domain:		PEDRO-COMPUTER 
+      Logon ID:		0x107482C 
+    Service Information: 
+      Service Name: 		PersistentService2 
+      Service File Name:	C:\Users\pedro\AppData\Local\Temp\persistence.exe 
+      Service Type: 		0x10 
+      Service Start Type:	2 
+      Service Account: 		LocalSystem 
 - format: xml
   sample: |-
     <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event"> 
@@ -83,23 +106,23 @@ event_sample:
         <Task>12289</Task> 
         <Opcode>0</Opcode> 
         <Keywords>0x8020000000000000</Keywords> 
-        <TimeCreated SystemTime="2022-08-09T02:08:30.109718300Z" /> 
-        <EventRecordID>251716</EventRecordID> 
-        <Correlation ActivityID="{c2f198f9-abad-0000-039a-f1c2adabd801}" /> 
-        <Execution ProcessID="584" ThreadID="640" /> 
+        <TimeCreated SystemTime="2022-09-15T03:55:42.431355000Z" /> 
+        <EventRecordID>234504</EventRecordID> 
+        <Correlation ActivityID="{cf6cb87c-ae9a-0000-91b9-6ccf9aaed801}" /> 
+        <Execution ProcessID="616" ThreadID="7728" /> 
         <Channel>Security</Channel> 
-        <Computer>Pedro01</Computer> 
+        <Computer>pedro-computer</Computer> 
         <Security /> 
       </System> 
       <EventData> 
-        <Data Name="SubjectUserSid">S-1-5-18</Data> 
-        <Data Name="SubjectUserName">PEDRO01$</Data> 
-        <Data Name="SubjectDomainName">WORKGROUP</Data> 
-        <Data Name="SubjectLogonId">0x3e7</Data> 
-        <Data Name="ServiceName">WpnUserService_abae2</Data> 
-        <Data Name="ServiceFileName">C:\Windows\system32\svchost.exe -k UnistackSvcGroup</Data> 
-        <Data Name="ServiceType">0xe0</Data> 
+        <Data Name="SubjectUserSid">S-1-5-21-3768430097-3400800235-1714852860-1001</Data> 
+        <Data Name="SubjectUserName">pedro-admin</Data> 
+        <Data Name="SubjectDomainName">PEDRO-COMPUTER</Data> 
+        <Data Name="SubjectLogonId">0x107482c</Data> 
+        <Data Name="ServiceName">PersistentService2</Data> 
+        <Data Name="ServiceFileName">C:\Users\pedro\AppData\Local\Temp\persistence.exe</Data> 
+        <Data Name="ServiceType">0x10</Data> 
         <Data Name="ServiceStartType">2</Data> 
         <Data Name="ServiceAccount">LocalSystem</Data> 
       </EventData> 
-    </Event>
+    </Event> 
