Fixed some typos with invalid yaml

--- a/windows/sysmon/events/event-15.yml
+++ b/windows/sysmon/events/event-15.yml
@@ -58,7 +58,7 @@ event_fields:
   name: Contents
   type: string
   description: Content of the file
-  sample_value: [ZoneTransfer]  ZoneId=3  ReferrerUrl=Z:\files\last_sysmon\Sysmon.zip
+  sample_value: '[ZoneTransfer]  ZoneId=3  ReferrerUrl=Z:\files\last_sysmon\Sysmon.zip'
 references:
 - text: Sysmon Source
   link: https://docs.microsoft.com/en-us/sysinternals/downloads/sysmon#event-id-15-filecreatestreamhash
